Refactoring and implementing Grpc to comunication method with product-service